--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="timer">
         <h1 class="timerText">00:00:00</h1>
     </div>
-    <a href="https://github.com/ShermanDevers/shermandevers.github.io" target="_blank">
+    <a href="https://github.com/ShermanDevers/countdown" target="_blank">
         <i class='bx bxl-github bx-md' title="Source Code" style="color: white;"></i>
     </a>
     <script src="script.js"></script>
